Fix horizontal overflow

--- a/styles/Style_5.css
+++ b/styles/Style_5.css
@@ -10,7 +10,6 @@ body {
   height: 200vh;
   background-color: #999999;
   padding: 0 20px;
-  width: 100vw;
   height: 100vh;
 
   /* background-image: url(../assets/Logo_Mighty_ducks-01.png);
